--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URI=mongodb://127.0.0.1/your-database-name
+POSTGRES_URL=postgres://127.0.0.1:5432/payloadtests
 PAYLOAD_SECRET=YOUR_SECRET_HERE
